test topology